--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/shop/css/style.css
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/shop/css/style.css
@@ -639,7 +639,7 @@ a:focus {
 
 .hero-slider .single-slider {
     overflow: hidden;
-    background-image: url("images/labs/lab_01.jpg");
+    background-image: url('../images/labs/lab_01.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
