thêm chức năng đăng nhập cho admin

--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Shared/_LayoutPage.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Shared/_LayoutPage.cshtml
@@ -21,7 +21,7 @@
         <a class="app-sidebar-toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a>
         <ul class="app-nav">
             <li>
-                <a class="app-nav-item" href="login.html"><i class='bx bx-log-out bx-rotate-180'></i></a>
+                <a class="app-nav-item" href="/Admin/Login/Index"><i class='bx bx-log-out bx-rotate-180'></i></a>
             </li>
         </ul>
     </header>
@@ -37,31 +37,31 @@
         <hr>
         <ul class="app-menu">
             <li>
-                <a class="app-menu-item haha" href="index.html">
+                <a class="app-menu-item haha" href="/Admin/AdminHome/Index">
                     <i class='bx bx-tachometer'></i>
                     <span class="app-menu-label">Trang chủ</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu-item" href="product-manager.html">
+                <a class="app-menu-item" href="/Admin/ProductsManager/Index">
                     <i class='bx bx-purchase-tag-alt'></i>
                     <span class="app-menu-label">Quản lý sản phẩm</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu-item" href="order-manager.html">
+                <a class="app-menu-item" href="/Admin/BillsManager/Index">
                     <i class='bx bx-task'></i>
                     <span class="app-menu-label">Quản lý đơn hàng</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu-item" href="sales-report.html">
+                <a class="app-menu-item" href="/Admin/SalesReport/Index">
                     <i class='bx bx-pie-chart-alt-2'></i>
                     <span class="app-menu-label">Báo cáo doanh thu</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu-item" href="settings.html">
+                <a class="app-menu-item" href="/Admin/Settings/Index">
                     <i class='bx bx-cog'></i>
                     <span class="app-menu-label">Đổi mật khẩu</span>
                 </a>
