--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/admin/css/login.css
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/admin/css/login.css
@@ -116,7 +116,7 @@ input {
     font-size: 18px;
 }
 
-input[type=button] {
+input[type=submit] {
     font-size: 17px;
     background: var(--main-bg);
     border: 1px solid var(--main-bg);
