thêm chức năng đăng nhập cho admin

--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Shared/_RootLayoutPage.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Shared/_RootLayoutPage.cshtml
@@ -25,7 +25,7 @@
         <a class="app-sidebar-toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a>
         <ul class="app-nav">
             <li>
-                <a class="app-nav-item" href="login.html"><i class='bx bx-log-out bx-rotate-180'></i></a>
+                <a class="app-nav-item" href="/Admin/Login/Index"><i class='bx bx-log-out bx-rotate-180'></i></a>
             </li>
         </ul>
     </header>
@@ -41,25 +41,25 @@
         <hr>
         <ul class="app-menu">
             <li>
-                <a class="app-menu-item haha" href="~/Areas/AdminRoot/Views/AdminRootHome/AdminRootHome.cshtml">
+                <a class="app-menu-item haha" href="/Admin/RootHome/Index">
                     <i class='bx bx-tachometer'></i>
                     <span class="app-menu-label">Trang chủ</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu-item" href="~/Areas/AdminRoot/Views/AdminRootHome/AdminManager.cshtml">
+                <a class="app-menu-item" href="/Admin/RootAdminsManager/Index">
                     <i class='bx bx-id-card'></i>
                     <span class="app-menu-label">Quản lý admin</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu-item" href="~/Areas/AdminRoot/Views/AdminRootHome/CustomerManager.cshtml">
+                <a class="app-menu-item" href="/Admin/RootCustomersManager/Index">
                     <i class='bx bx-id-card'></i>
                     <span class="app-menu-label">Quản lý khách hàng</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu-item" href="~/Areas/AdminRoot/Views/AdminRootHome/Settings.cshtml">
+                <a class="app-menu-item" href="/Admin/RootSettings/Index">
                     <i class='bx bx-cog'></i>
                     <span class="app-menu-label">Đổi mật khẩu</span>
                 </a>
