--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/AddProduct/Index.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/AddProduct/Index.cshtml
@@ -79,7 +79,7 @@
         <div class="col-md-12">
             <div class="tile">
                 <h4 class="tile-title">Tạo mới sản phẩm</h4>
-                <div class="tile-body">                  
+                <div class="tile-body">
                     <form class="row">
                         <div class="form-group col-md-3">
                             <label class="control-label">Tên sản phẩm</label>
@@ -136,21 +136,16 @@
                         </div>
                         <div class="form-group col-md-12">
                             <label class="control-label">Ảnh sản phẩm</label>
-                            <div id="myfileupload">
-                                <input type="file" id="uploadfile" name="ImageUpload" onchange="readURL(this);" />
-                            </div>
-                            <div id="thumbbox">
-                                <img height="450" width="400" alt="Thumb image" id="thumbimage" style="display: none" />
-                                <a class="removeimg" href="javascript:"></a>
-                            </div>
                             <div id="boxchoice">
-                                <a href="javascript:" class="Choicefile">
+                                <a href="javascript:" class="Choicefile" onClick="ChooseImage()">
                                     <i class="fas fa-cloud-upload-alt"></i>
                                     Chọn ảnh
                                 </a>
                                 <p style="clear:both"></p>
                             </div>
-
+                            <div id="myfileupload">
+                                <input type="text" name="UrlImage" />
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -160,6 +155,23 @@
         </div>
     </div>
 </main>
+
+
+@section script {
+<script src="~/Assets/plugins/ckfinder/ckfinder.js"></script>
+    <script>
+        function ChooseImage() {
+            var finder = new CKFinder();
+            finder.selectActionFunction = DienUrlVaoInput;
+            finder.popup();
+        }
+        function DienUrlVaoInput(fileUrl) {
+            $('input[name=UrlImage]').val(fileUrl);
+        }
+    </script>
+}
+
+
 
 
 
