--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/NewsManager/Index.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/NewsManager/Index.cshtml
@@ -24,9 +24,10 @@
     </div>
 </main>
 
+@section script {
 <script src="~/Assets/plugins/ckeditor/ckeditor.js"></script>
 <script src="~/Assets/plugins/ckfinder/ckfinder.js"></script>
 <script>
     CKEDITOR.replace("content-new");
 </script>
-
+}
