--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Shared/_LayoutPage.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Shared/_LayoutPage.cshtml
@@ -1,4 +1,4 @@
-﻿@using Model.model;
+﻿@using Model.entity;
 <!DOCTYPE html>
 <html>
 <head>
@@ -91,5 +91,7 @@
     <script src="~/Assets/admin/vendor/plugins/pace.min.js"></script>
     <script src="~/Assets/admin/js/main.js"></script>
     <!-- ================================================================================================== -->
+   
+    @RenderSection("script", false);
 </body>
 </html>
