--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/AddProduct/Index.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/AddProduct/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using System.Collections
+@using Model.entity
+@model Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Areas.Admin.Models.AddProductModel
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPage.cshtml";
@@ -74,33 +76,51 @@
         }
 </style>
 
+
+@{
+    ArrayList result = (ArrayList)Session["List-Type-Status-Supplier-Product"];
+    ArrayList ListTypeProduct = (ArrayList)result[0];
+    ArrayList ListStatusProduct = (ArrayList)result[1];
+    ArrayList ListSupplier = (ArrayList)result[2];
+}
+
 <main class="app-content">
     <div class="row">
         <div class="col-md-12">
             <div class="tile">
                 <h4 class="tile-title">Tạo mới sản phẩm</h4>
                 <div class="tile-body">
-                    <form class="row">
+                    @*<form class="row">*@
+                    @using (Html.BeginForm("AddNewProduct", "AddProduct"))
+                    {
                         <div class="form-group col-md-3">
                             <label class="control-label">Tên sản phẩm</label>
-                            <input class="form-control" type="text">
+                            @*<input class="form-control" type="text" name="TenSP">*@
+                            @Html.TextBoxFor(model => model.NameProduct, new { @class = "form-control", @type = "text" })
+                            @Html.ValidationMessageFor(model => model.NameProduct, "", new { @class = "text-danger" })
                         </div>
-                        <div class="form-group  col-md-3">
+                        <div class="form-group col-md-3">
                             <label class="control-label">Số lượng</label>
-                            <input class="form-control" type="number">
+                            @*<input class="form-control" type="number" name="SoLuongSP">*@
+                            @Html.TextBoxFor(model => model.Quantity, new { @class = "form-control", @type = "number" })
+                            @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group col-md-3">
                             <label class="control-label">Giá niêm yết</label>
-                            <input class="form-control" type="text">
+                            @*<input class="form-control" type="number" name="GiaNiemYetSP">*@
+                            @Html.TextBoxFor(model => model.ListedPrice, new { @class = "form-control", @type = "number" })
+                            @Html.ValidationMessageFor(model => model.ListedPrice, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group col-md-3">
                             <label class="control-label">Giá bán thực tế</label>
-                            <input class="form-control" type="text">
+                            @*<input class="form-control" type="number">*@
+                            @Html.TextBoxFor(model => model.CurrentPrice, new { @class = "form-control", @type = "number" })
+                            @Html.ValidationMessageFor(model => model.CurrentPrice, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group col-md-3">
                             <label for="exampleSelect1" class="control-label">Loại sản phẩm</label>
-                            <select class="form-control" id="exampleSelect2">
-                                <option>-- Chọn loại sản phẩm --</option>
+                            <select class="form-control" id="exampleSelect1">
+                                @*<option>-- Chọn loại sản phẩm --</option>
                                 <option>Bàn ăn</option>
                                 <option>Bàn thông minh</option>
                                 <option>Tủ</option>
@@ -109,30 +129,44 @@
                                 <option>Giường người lớn</option>
                                 <option>Giường trẻ em</option>
                                 <option>Bàn trang điểm</option>
-                                <option>Giá đỡ</option>
+                                <option>Giá đỡ</option>*@
+                                @foreach(TypeProduct item in ListTypeProduct)
+                                {
+                                     <option value="@item.Id_type">@item.Name_type</option>
+                                }
                             </select>
                         </div>
                         <div class="form-group col-md-3 ">
                             <label for="exampleSelect1" class="control-label">Tình trạng</label>
-                            <select class="form-control" id="exampleSelect1">
-                                <option>-- Chọn tình trạng --</option>
+                            <select class="form-control" id="exampleSelect2">
+                                @*<option>-- Chọn tình trạng --</option>
                                 <option>Còn hàng</option>
-                                <option>Hết hàng</option>
+                                <option>Hết hàng</option>*@
+                                @foreach(StatusProduct st in ListStatusProduct)
+                                {
+                                    <option value="@st.Id_status">@st.Name_status</option>
+                                }
                             </select>
                         </div>
                         <div class="form-group col-md-3 ">
                             <label for="exampleSelect1" class="control-label">Nhà cung cấp</label>
                             <select class="form-control" id="exampleSelect3">
-                                <option>-- Chọn nhà cung cấp --</option>
+                                @*<option>-- Chọn nhà cung cấp --</option>
                                 <option>Phong vũ</option>
                                 <option>Thế giới di động</option>
                                 <option>FPT</option>
-                                <option>Admin</option>
+                                <option>Admin</option>*@
+                                @foreach(Supplier sl in ListSupplier)
+                                {
+                                    <option value="@sl.Id_supplier">@sl.Name_supplier</option>
+                                }
                             </select>
                         </div>
                         <div class="form-group col-md-12">
                             <label class="control-label">Mô tả sản phẩm</label>
-                            <textarea class="form-control" name="MoTaSanPham" id="mota"></textarea>
+                            @*<textarea class="form-control" id="mota" name="MoTaSP"></textarea>*@
+                            @Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group col-md-12">
                             <label class="control-label">Ảnh sản phẩm</label>
@@ -141,16 +175,18 @@
                                     <i class="fas fa-cloud-upload-alt"></i>
                                     Chọn ảnh
                                 </a>
+                                <a id="myfileupload">
+                                    <input type="text" name="UrlImage" style="min-width:300px" />
+                                </a>
                                 <p style="clear:both"></p>
                             </div>
-                            <div id="myfileupload">
-                                <input type="text" name="UrlImage" />
-                            </div>
                         </div>
-                    </form>
+                        <div></div>
+                        <button class="btn btn-save" type="submit">Lưu lại</button>
+                        <a class="btn btn-cancel" href="/Admin/AddProduct/Index">Hủy bỏ</a>
+                    }
+                    @*</form>*@
                 </div>
-                <button class="btn btn-save" type="submit">Lưu lại</button>
-                <a class="btn btn-cancel" href="#">Hủy bỏ</a>
             </div>
         </div>
     </div>
@@ -158,7 +194,7 @@
 
 
 @section script {
-<script src="~/Assets/plugins/ckfinder/ckfinder.js"></script>
+    <script src="~/Assets/plugins/ckfinder/ckfinder.js"></script>
     <script>
         function ChooseImage() {
             var finder = new CKFinder();
