--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Login/Index.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Login/Index.cshtml
@@ -20,19 +20,24 @@
             </div>
             <div class="login-form">
                 <span class="login-form-title text-center d-block mb-4">ĐĂNG NHẬP HỆ THỐNG</span>
-                @using (Html.BeginForm("Login", "Login", FormMethod.Post))
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <!--Thông báo lỗi chung không bao gồm lỗi
+                đã thông báo cho từng thuộc tính-->
+                @using (Html.BeginForm("Login", "Login"))
                 {
-                    @Html.ValidationSummary(false, "", new { @class = "text-danger" });
+                    @Html.AntiForgeryToken() <!--Tránh các request giả mạo-->
                     <div class="wrap-input">
                         <!-- <input class="input" type="text" placeholder="Tài khoản quản trị" name="username" id="field-username"> -->
                         @Html.TextBoxFor(model => model.Username, new { @class = "input", @autofocus = "autofocus",
                        @id = "field-username", @placeholder = "Tài khoản quản trị" })
+                        @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
                         <span class="symbol-input d-flex align-items-center pl-4"><i class='bx bx-user'></i></span>
                     </div>
                     <div class="wrap-input">
                         <!-- <input autocomplete="off" class="input" type="password" placeholder="Mật khẩu" name="password" id="field-password"> -->
                         @Html.PasswordFor(model => model.Password, new { @class = "input", @id = "field-password",
-                        @placeholder = "Mật khẩu", @autocomplete = "off", @type = "password" })
+                       @placeholder = "Mật khẩu", @autocomplete = "off", @type = "password" })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                         <span toggle="#field-password" class="bx bx-hide field-icon click-eye"></span>
                         <span class="symbol-input d-flex align-items-center pl-4"><i class='bx bx-key'></i></span>
                     </div>
