--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Profile/ProfileUser.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Profile/ProfileUser.cshtml
@@ -27,7 +27,12 @@
                                 <a href="purchase-history.html"><i class="bi bi-receipt"></i> Lịch sử mua hàng</a>
                             </li>
                             <li>
-                                <a href="change-pass.html"><i class="bi bi-lock"></i> Đổi mật khẩu</a>
+                                <a href="/Account/ChangePassword"><i class="bi bi-lock"></i> Đổi mật khẩu</a>
+                            </li>
+                            <li>
+                                <a href="/Account/Logout">
+                                    <i class="bi bi-box-arrow-in-right"></i> Đăng xuất
+                                </a>
                             </li>
                         </ul>
                     </div>
