--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Share/LayoutLogin.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Share/LayoutLogin.cshtml
@@ -24,7 +24,7 @@
                 <div class="col-lg-7 col-md-7 col-12">
                     <div class="title-left d-flex justify-content-start h-100 align-items-center">
                         <a class="w-25 mr-4" href="/Home/Index">
-                        <img src="~/Assets/shop/images/labchemicals-logo.png" />
+                            <img src="~/Assets/shop/images/labchemicals-logo.png" />
                         </a>
                         <span class="d-inline-block">Đăng Nhập</span>
                     </div>
@@ -37,7 +37,7 @@
             </div>
         </div>
     </header>
-   
+
 
     <div>
         @RenderBody()
@@ -181,6 +181,7 @@
     <script src="~/Assets/shop/js/onepage-nav.min.js"></script>
     <script src="~/Assets/shop/js/easing.js"></script>
     <script src="~/Assets/shop/js/active.js"></script>
+    <script src="~/Assets/shop/js/main.js"></script>
     <a id="scrollUp" href="#top" style="position: fixed; z-index: 2147483647;"><span><i class="fa fa-angle-up"></i></span></a>
 </body>
 </html>
