--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/Login.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model  Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.LoginCustomerModel
+
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Share/LayoutLogin.cshtml";
@@ -20,10 +21,28 @@
             </div>
             <div class="col-lg-5 col-md-5 col-12">
                 <div class="h-100 d-flex align-items-center">
-                    <form class="m-0 p-5 text-center">
+                    @using (Html.BeginForm("loginCustomer", "Account", FormMethod.Post,
+                        new { @class = "m-0 p-5 text-center" }))
+                    {
+                        <!--<form class="m-0 p-5 text-center">-->
                         <h5 class="mb-4">Đăng Nhập</h5>
-                        <input class="w-100 mb-3" type="username" placeholder="Email">
-                        <input class="w-100 mb-4" type="password" placeholder="Mật khẩu">
+                        @Html.ValidationSummary(false, "", new { @class = "text-danger notification-error" });
+                        <!--<input class="w-100 mb-3" type="username" placeholder="Email">-->
+                        @Html.TextBoxFor(model => model.Username, new
+                   {
+                       @class = "w-100 mb-3 input-login-field",
+                       @autofocus = "autofocus",
+                       @placeholder = "Email",
+                            @type = "email"
+                   })
+                        <!--<input class="w-100 mb-4" type="password" placeholder="Mật khẩu">-->
+                        @Html.PasswordFor(model => model.Password, new
+                        {
+                            @class = "w-100 mb-4 input-login-field",
+                        @placeholder = "Mật khẩu",
+                            @autocomplete = "off",
+                            @type = "password"
+                        })
                         <button class="next w-100">Đăng nhập</button>
                         <span class="or d-inline-block text-uppercase my-4 position-relative">Hoặc</span>
                         <a class="google d-flex justify-content-center w-100 mb-3"><img width="25px" class="mr-2" src="images/logo-google.png" alt="">Google</a>
@@ -31,7 +50,8 @@
                             <a class="mr-3" href="/Account/ForgotPassword">Quên mật khẩu?</a>
                             <a href="/Account/Register">Đăng ký?</a>
                         </span>
-                    </form>
+                        <!--</form>-->
+                    }
                 </div>
             </div>
         </div>
