--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/Register.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.RegisterCustomerModel
 @{
     ViewBag.Title = "Logout";
     Layout = "~/Views/Share/LayoutLogin.cshtml";
@@ -19,14 +19,47 @@
             </div>
             <div class="col-lg-5 col-md-5 col-12">
                 <div class="h-100 d-flex align-items-center">
-                    <form class="m-0 p-5 text-center">
+                    @using (Html.BeginForm("registerCustomer", "Account", FormMethod.Post,
+                        new { @class = "m-0 p-5 text-center" }))
+                    {
                         <h5 class="mb-4">Đăng Ký</h5>
-                        <input class="w-100 mb-3" type="text" placeholder="Email">
-                        <input class="w-100 mb-3" type="password" placeholder="Mật khẩu">
-                        <input class="w-100 mb-4" type="password" placeholder="Nhập lại mật khẩu">
+                        @Html.ValidationMessage("", new { @class = "text-danger notification-error" });
+                        <!--<input class="w-100 mb-3" type="text" placeholder="Email">-->
+                        @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger notification-error" })
+                        @Html.TextBoxFor(model => model.email, new
+
+                   {
+                       @class = "w-100 mb-3 input-login-field",
+                       @autofocus = "autofocus",
+                       @placeholder = "Email",
+                       @type = "email"
+                   })
+
+                        <!--<input class="w-100 mb-3" type="password" placeholder="Mật khẩu">-->
+                        @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger notification-error" })
+                        @Html.PasswordFor(model => model.password, new
+                   {
+                       @class = "w-100 mb-3 input-login-field",
+                       @placeholder = "Mật khẩu",
+                       @autocomplete = "off",
+                       @type = "password"
+                   })
+
+
+                        <!--<input class="w-100 mb-4" type="password" placeholder="Nhập lại mật khẩu">-->
+                        @Html.ValidationMessageFor(model => model.confirm_pass, "", new { @class = "text-danger notification-error" })
+                        @Html.PasswordFor(model => model.confirm_pass, new
+                   {
+                       @class = "w-100 mb-4 input-login-field",
+                       @placeholder = "Nhập lại mật khẩu",
+                       @autocomplete = "off",
+                       @type = "password"
+                   })
                         <button class="next w-100 mb-3">Tiếp theo</button>
                         <span class="shotcut">Bạn đã có tài khoản? <a href="/Account/Login">Đăng nhập</a></span>
-                    </form>
+                    }
+                    <!--<form class="m-0 p-5 text-center">-->
+                    <!--</form>-->
                 </div>
             </div>
         </div>
