--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Cart/ShoppingCart.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Cart/ShoppingCart.cshtml
@@ -1,8 +1,8 @@
-﻿
-@{
+﻿@{ 
     ViewBag.Title = "ShoppingCart";
     Layout = "~/Views/Share/Layout.cshtml";
 }
+
 <div class="breadcrumbs py-4">
     <div class="container text-left">
         <ul class="bread-list d-inline-block">
@@ -28,123 +28,47 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td class="image" data-title="No">
-                        <img src="https://via.placeholder.com/100x100" alt="#">
-                    </td>
-                    <td class="product-des" data-title="Description">
-                        <p class="product-name">
-                            <a href="product-details.html">Axit Sunfuric loãng</a>
-                        </p>
-                        <p class="product-des">
-                            Axit sunfuric là một axit mạnh, hóa chất này có đầy đủ các
-                            tính chất hóa học chung của axit.
-                        </p>
-                    </td>
-                    <td class="price text-center" data-title="Price">
-                        <span>1,000,000đ</span>
-                    </td>
-                    <td class="qty" data-title="Qty">
-                        <!-- Input Order -->
-                        <div class="input-group">
-                            <div class="button minus">
-                                <button type="button" class="btn btn-primary btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
-                                    <i class="ti-minus"></i>
-                                </button>
-                            </div>
-                            <input type="text" name="quant[1]" class="input-number" data-min="1" data-max="100" value="1">
-                            <div class="button plus">
-                                <button type="button" class="btn btn-primary btn-number" data-type="plus" data-field="quant[1]">
-                                    <i class="ti-plus"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </td>
-                    <td class="total-amount text-center" data-title="Total">
-                        <span>1,000,000đ</span>
-                    </td>
-                    <td class="action text-center" data-title="Remove">
-                        <a href="#"><i class="ti-trash remove-icon"></i></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="image" data-title="No">
-                        <img src="https://via.placeholder.com/100x100" alt="#">
-                    </td>
-                    <td class="product-des" data-title="Description">
-                        <p class="product-name">
-                            <a href="product-details.html">Axit Sunfuric loãng</a>
-                        </p>
-                        <p class="product-des">
-                            Axit sunfuric là một axit mạnh, hóa chất này có đầy đủ các
-                            tính chất hóa học chung của axit.
-                        </p>
-                    </td>
-                    <td class="price text-center" data-title="Price">
-                        <span>1,000,000đ</span>
-                    </td>
-                    <td class="qty" data-title="Qty">
-                        <!-- Input Order -->
-                        <div class="input-group">
-                            <div class="button minus">
-                                <button type="button" class="btn btn-primary btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
-                                    <i class="ti-minus"></i>
-                                </button>
-                            </div>
-                            <input type="text" name="quant[1]" class="input-number" data-min="1" data-max="100" value="1">
-                            <div class="button plus">
-                                <button type="button" class="btn btn-primary btn-number" data-type="plus" data-field="quant[1]">
-                                    <i class="ti-plus"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </td>
-                    <td class="total-amount text-center" data-title="Total">
-                        <span>1,000,000đ</span>
-                    </td>
-                    <td class="action text-center" data-title="Remove">
-                        <a href="#"><i class="ti-trash remove-icon"></i></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="image" data-title="No">
-                        <img src="https://via.placeholder.com/100x100" alt="#">
-                    </td>
-                    <td class="product-des" data-title="Description">
-                        <p class="product-name">
-                            <a href="product-details.html">Axit Sunfuric loãng</a>
-                        </p>
-                        <p class="product-des">
-                            Axit sunfuric là một axit mạnh, hóa chất này có đầy đủ các
-                            tính chất hóa học chung của axit.
-                        </p>
-                    </td>
-                    <td class="price text-center" data-title="Price">
-                        <span>1,000,000đ</span>
-                    </td>
-                    <td class="qty" data-title="Qty">
-                        <!-- Input Order -->
-                        <div class="input-group">
-                            <div class="button minus">
-                                <button type="button" class="btn btn-primary btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
-                                    <i class="ti-minus"></i>
-                                </button>
-                            </div>
-                            <input type="text" name="quant[1]" class="input-number" data-min="1" data-max="100" value="1">
-                            <div class="button plus">
-                                <button type="button" class="btn btn-primary btn-number" data-type="plus" data-field="quant[1]">
-                                    <i class="ti-plus"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </td>
-                    <td class="total-amount text-center" data-title="Total">
-                        <span>1,000,000đ</span>
-                    </td>
-                    <td class="action text-center" data-title="Remove">
-                        <a href="#"><i class="ti-trash remove-icon"></i></a>
-                    </td>
-                </tr>
+                @foreach (Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.CartItem item in ViewBag.cartData)
+                    { 
+                        <tr>
+                            <td class="image" data-title="No">
+                                <img src="https://via.placeholder.com/100x100" alt="#">
+                            </td>
+                            <td class="product-des" data-title="Description">
+                                <p class="product-name">
+                                    <a href="product-details.html">@item.Product.Name_product</a>
+                                </p>
+                                <p class="product-des">
+                                    @item.Product.Desc_product
+                                </p>
+                            </td>
+                            <td class="price text-center" data-title="Price">
+                                <span>@item.Product.Current_price đ</span>
+                            </td>
+                            <td class="qty" data-title="Qty">
+                                <!-- Input Order -->
+                                <div class="input-group">
+                                    <div class="button minus">
+                                        <button type="button" class="btn btn-primary btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
+                                            <i class="ti-minus"></i>
+                                        </button>
+                                    </div>
+                                    <input type="text" name="quant[1]" class="input-number" data-min="1" data-max="100" value="1">
+                                    <div class="button plus">
+                                        <button type="button" class="btn btn-primary btn-number" data-type="plus" data-field="quant[1]">
+                                            <i class="ti-plus"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="total-amount text-center" data-title="Total">
+                                <span>@(item.Product.Current_price*item.Quantity) đ</span>
+                            </td>
+                            <td class="action text-center" data-title="Remove">
+                                <a href="#"><i class="ti-trash remove-icon"></i></a>
+                            </td>
+                        </tr>
+                    }
             </tbody>
         </table>
 
