--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/ConfirmPassword.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/ConfirmPassword.cshtml
@@ -1,6 +1,6 @@
-﻿@model Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.ChangePassCustomerModel
+﻿@model Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.ConfirmPasswordCustomerModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Confirm Password";
     Layout = "~/Views/Share/LayoutLogin.cshtml";
 }
 
@@ -12,50 +12,41 @@
             </div>
             <div class="col-lg-5 col-md-5 col-12">
                 <div class="h-100 d-flex align-items-center">
-                    @using (Html.BeginForm("changePasswordCustomer", "Account", FormMethod.Post,
-                        new { @class = "m-0 p-5 text-center" }))
+                    @using (Html.BeginForm("confirmPasswordCustomer", "Account", FormMethod.Post,
+                    new { @class = "m-0 p-5 text-center" }))
                     {
-                        <h5 class="mb-4">Đổi Mật Khẩu</h5>
-                        @Html.ValidationMessage("", new { @class = "text-danger notification-error"});
-                        @*@Html.ValidationMessage("success", new { @class = "text-success notification-error"})*@
-                        if(@ViewBag.success_changePass != null)
-                            {
-                                <div class="alert alert-success notification-error" role="alert">
-                                    @ViewBag.success_changePass
-                                </div>
-                            }
-                        @*<input class="w-100 mb-3" type="password" placeholder="Mật khẩu cũ" />*@
-                        @Html.ValidationMessageFor(model => model.oldPass, "", new { @class = "text-danger notification-error" })
-                        @Html.PasswordFor(model => model.oldPass, new
-                   {
-                       @class = "w-100 mb-3 input-login-field",
-                       @placeholder = "Mật khẩu cũ",
-                       @autocomplete = "off",
-                       @type = "password"
-                   })
-
+                        <h5 class="mb-4">Xác Nhận Mật Khẩu</h5>
+                        if (@ViewBag.success_newPass != null)
+                        {
+                            <div class="alert alert-success notification-error" role="alert">
+                                @ViewBag.success_newPass
+                            </div>
+                        }
+                        @Html.ValidationMessage("", new { @class = "text-danger notification-error" })
                         @*<input class="w-100 mb-3" type="password" placeholder="Mật khẩu mới" />*@
                         @Html.ValidationMessageFor(model => model.newPass, "", new { @class = "text-danger notification-error" })
                         @Html.PasswordFor(model => model.newPass, new
                    {
                        @class = "w-100 mb-3 input-login-field",
-                       @placeholder = "Mật khẩu mới",
                        @autocomplete = "off",
+                       @placeholder = "Mật khẩu mới",
                        @type = "password"
                    })
+
 
                         @*<input class="w-100 mb-4" type="password" placeholder="Xác nhận lại mật khẩu mới" />*@
                         @Html.ValidationMessageFor(model => model.confirm_newPass, "", new { @class = "text-danger notification-error" })
                         @Html.PasswordFor(model => model.confirm_newPass, new
                    {
                        @class = "w-100 mb-4 input-login-field",
-                       @placeholder = "Xác nhận lại mật khẩu mới",
                        @autocomplete = "off",
+                       @placeholder = "Xác nhận lại mật khẩu mới",
                        @type = "password"
                    })
+
                         <button class="next w-100 mb-3">Xác nhận</button>
                         <span class="shotcut">
-                            <a class="mr-3" href="login.html">Đăng nhập?</a>
+                            <a class="mr-3">Đăng nhập?</a>
                             <a href="register.html">Đăng ký?</a>
                         </span>
                     }
