--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/Register.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/Register.cshtml
@@ -23,7 +23,14 @@
                         new { @class = "m-0 p-5 text-center" }))
                     {
                         <h5 class="mb-4">Đăng Ký</h5>
-                        @Html.ValidationMessage("", new { @class = "text-danger notification-error" });
+                        @Html.ValidationMessage("", new { @class = "text-danger notification-error"});
+                        if(@ViewBag.success_registier != null)
+                        {
+                            <div class="alert alert-success notification-error" role="alert" >
+                                @ViewBag.success_registier
+                            </div>
+                        }
+                        @*@Html.ValidationMessage("success", new { @class = "text-success notification-error"})*@
                         <!--<input class="w-100 mb-3" type="text" placeholder="Email">-->
                         @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger notification-error" })
                         @Html.TextBoxFor(model => model.email, new
