--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/SalesReport/Index.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/SalesReport/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "SalesReport";
+    ViewBag.Title = "Báo cáo doanh thu";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPage.cshtml";
 }
 
