--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Settings/Index.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Settings/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "Settings";
+    ViewBag.Title = "Đổi mật khẩu";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPage.cshtml";
 }
 
 <main class="app-content">
     <div class="app-title">
         <ul class="app-breadcrumb breadcrumb">
-            <li class="breadcrumb-item"><a href="#"><b>Cài đặt hệ thống</b></a></li>
+            <li class="breadcrumb-item"><a href="#"><b>Đổi mật khẩu</b></a></li>
         </ul>
         <div id="clock"></div>
     </div>
