--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/NewsManager/Index.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/NewsManager/Index.cshtml
@@ -1,6 +1,6 @@
-﻿
+﻿@model Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Areas.Admin.Models.AddNewsModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Quản lý bài viết";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPage.cshtml";
 }
 
@@ -10,24 +10,53 @@
             <div class="tile">
                 <h4 class="tile-title">Thêm bài viết</h4>
                 <div class="tile-body">
-                    <form class="row">                  
+                    @using (Html.BeginForm("AddNews", "NewsManager", new { @class = "row" }))
+                    {
+                        @Html.AntiForgeryToken() <!--Tránh các request giả mạo-->
+                        @*<form class="row">*@
+                        <div class="form-group col-md-12">
+                            <label class="control-label">Tiêu đề bài viết</label>
+                            @*<textarea class="form-control" name="content-title" id="content-title"></textarea>*@
+                            @Html.TextAreaFor(model => model.TitleNews, new { @class = "form-control", @name = "content-title", @id = "content-title" })
+                            @Html.ValidationMessageFor(model => model.TitleNews, "", new { @class = "text-danger" })
+                        </div>
                         <div class="form-group col-md-12">
                             <label class="control-label">Nội dung bài viết</label>
-                            <textarea class="form-control" name="content-new" id="content-new"></textarea>
+                            @*<textarea class="form-control" name="content-new" id="content-new"></textarea>*@
+                            @Html.TextAreaFor(model => model.ContentNews, new { @class = "form-control", @name = "content-new", @id = "content-new" })
+                            @Html.ValidationMessageFor(model => model.ContentNews, "", new { @class = "text-danger" })
                         </div>
-                    </form>
+                        <button class="btn btn-save" type="submit">Lưu lại</button>
+                        <a class="btn btn-cancel" href="/Admin/NewsManager/Index">Hủy bỏ</a>
+                        @*</form>*@
+                    }
                 </div>
-                <button class="btn btn-save" type="submit">Lưu lại</button>
-                <a class="btn btn-cancel" href="">Hủy bỏ</a>
             </div>
         </div>
     </div>
 </main>
 
 @section script {
-<script src="~/Assets/plugins/ckeditor/ckeditor.js"></script>
-<script src="~/Assets/plugins/ckfinder/ckfinder.js"></script>
-<script>
-    CKEDITOR.replace("content-new");
-</script>
+    <script src="~/Assets/plugins/ckeditor/ckeditor.js"></script>
+    <script src="~/Assets/plugins/ckfinder/ckfinder.js"></script>
+    <script>
+        CKEDITOR.replace("content-new")
+    </script>
+
+    <!--Hiển thị thông báo dùng sweetalert-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+    <script charset="utf-8" type="text/javascript">
+    @if("Success".Equals(ViewBag.MessAlert)) {
+        <text >
+                $(document).ready(function()
+                    {
+                    swal({
+                        title: "Thông báo",
+                        text: "Chúc mừng bạn đã thêm bài viết thành công ^.^",
+                        type: "success"
+                    });
+                });
+        </text>
+    }
+    </script>
 }
