--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Shared/_LayoutPage.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/Shared/_LayoutPage.cshtml
@@ -20,16 +20,6 @@
         var admin = (Admin)Session["ADMIN_SESSION"];
     }
 
-    <!-- Header -->
-    <header class="app-header">
-        <a class="app-sidebar-toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a>
-        <ul class="app-nav">
-            <li>
-                <a class="app-nav-item" href="/Admin/Login/Index"><i class='bx bx-log-out bx-rotate-180'></i></a>
-            </li>
-        </ul>
-    </header>
-
     <!-- Sidebar Menu -->
     <div class="app-sidebar-overlay" data-toggle="sidebar"></div>
     <aside class="app-sidebar">
@@ -74,6 +64,12 @@
                 <a class="app-menu-item" href="/Admin/Settings/Index">
                     <i class='bx bx-cog'></i>
                     <span class="app-menu-label">Đổi mật khẩu</span>
+                </a>
+            </li>
+            <li>
+                <a class="app-menu-item" href="/Admin/Login/Index">
+                    <i class='bx bx-log-out'></i>
+                    <span class="app-menu-label">Đăng xuất</span>
                 </a>
             </li>
         </ul>
