update phan trang

--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/shop/css/custom.css
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/shop/css/custom.css
@@ -21,3 +21,10 @@ img.custom-image-product {
         webkit-transform: scale(1.5);
         transform: scale(1.5);
     }
+
+.pagination > li.active {
+    
+    background: #167DCC;
+    color: white;
+    cursor :pointer ;
+}
